--- a/drivers/rtc/Kconfig
+++ b/drivers/rtc/Kconfig
@@ -1159,14 +1159,15 @@ config RTC_DRV_M48T35
 	  will be called "rtc-m48t35".
 
 config RTC_DRV_M48T59
-	tristate "ST M48T59/M48T08/M48T02"
+	tristate "ST M48T59/M48T37/M48T08/M48T02"
 	depends on HAS_IOMEM
 	help
 	  If you say Y here you will get support for the
-	  ST M48T59 RTC chip and compatible ST M48T08 and M48T02.
+	  ST M48T59 RTC chip and compatible ST M48T37, M48T08 and M48T02.
 
 	  These chips are usually found in Sun SPARC and UltraSPARC
-	  workstations.
+	  workstations and in some single board computers such as
+	  Motorola MVME-167 and MVME-5100.
 
 	  This driver can also be built as a module, if so, the module
 	  will be called "rtc-m48t59".
